cmake_minimum_required(VERSION 3.20)
project(Bai01 C)

set(CMAKE_C_STANDARD 99)

add_executable(Bai01 PTIT_CNTT4_IT201_Session01/PTIT_CNTT4_IT201_Session01_Bai01.c
        PTIT_CNTT4_IT201_Session01/PTIT_CNTT4_IT201_Session01_Bai3.c
        PTIT_CNTT4_IT201_Session01/PTIT_CNTT4_IT201_Session01_Bai4.c
        PTIT_CNTT4_IT201_Session01/PTIT_CNTT4_IT201_Session01_Bai5.c
        PTIT_CNTT4_IT201_Session01/PTIT_CNTT4_IT201_Session01_Bai6.c
        PTIT_CNTT4_IT201_Session01/PTIT_CNTT4_IT201_Session01_Bai7.c
        PTIT_CNTT4_IT201_Session01/PTIT_CNTT4_IT201_Session01_Bai8.c)
add_executable(Bai02 PTIT_CNTT4_IT201_Session01/PTIT_CNTT4_IT201_Session01_Bai02.c)

