cmake_minimum_required(VERSION 3.20)
project(Bai01 C)

set(CMAKE_C_STANDARD 99)

add_executable(Bai01 PTIT_CNTT4_IT201_Session01/PTIT_CNTT4_IT201_Session01_Bai01.c
        PTIT_CNTT4_IT201_Session01/PTIT_CNTT4_IT201_Session01_Bai3.c
        PTIT_CNTT4_IT201_Session01/PTIT_CNTT4_IT201_Session01_Bai4.c
        PTIT_CNTT4_IT201_Session01/PTIT_CNTT4_IT201_Session01_Bai5.c
        PTIT_CNTT4_IT201_Session01/PTIT_CNTT4_IT201_Session01_Bai6.c
        PTIT_CNTT4_IT201_Session01/PTIT_CNTT4_IT201_Session01_Bai7.c
        PTIT_CNTT4_IT201_Session01/PTIT_CNTT4_IT201_Session01_Bai8.c
        PTIT_CNTT4_IT201_Session01/PTIT_CNTT4_IT201_Session01_Bai9.c
        PTIT_CNTT4_IT201_Session02/PTIT_CNTT4_IT201_Session02_Bai2.c
        PTIT_CNTT4_IT201_Session02/PTIT_CNTT4_IT201_Session02_Bai3.c
        PTIT_CNTT4_IT201_Session02/PTIT_CNTT4_IT201_Session02_Bai4.c
        PTIT_CNTT4_IT201_Session02/PTIT_CNTT4_IT201_Session02_Bai5.c
        PTIT_CNTT4_IT201_Session02/PTIT_CNTT4_IT201_Session02_Bai6.c
        PTIT_CNTT4_IT201_Session02/PTIT_CNTT4_IT201_Session02_Bai7.c
        PTIT_CNTT4_IT201_Session02/PTIT_CNTT4_IT201_Session02_Bai8.c
        PTIT_CNTT4_IT201_Session02/PTIT_CNTT4_IT201_Session02_Bai9.c
        PTIT_CNTT4_IT201_Session02/PTIT_CNTT4_IT201_Session02_Bai10.c
        PTIT_CNTT4_IT201_Session03/PTIT_CNTT4_IT201_Session03_Bai1.c
        PTIT_CNTT4_IT201_Session03/PTIT_CNTT4_IT201_Session03_Bai2.c
        PTIT_CNTT4_IT201_Session03/PTIT_CNTT4_IT201_Session03_Bai3.c
        PTIT_CNTT4_IT201_Session03/PTIT_CNTT4_IT201_Session03_Bai4.c
        PTIT_CNTT4_IT201_Session03/PTIT_CNTT4_IT201_Session03_Bai5.c
        PTIT_CNTT4_IT201_Session03/PTIT_CNTT4_IT201_Session03_Bai6.c
        PTIT_CNTT4_IT201_Session03/PTIT_CNTT4_IT201_Session03_Bai7.c
        PTIT_CNTT4_IT201_Session04/PTIT_CNTT4_IT201_Session04_Bai1.c
        PTIT_CNTT4_IT201_Session04/PTIT_CNTT4_IT201_Session04_Bai2.c
        PTIT_CNTT4_IT201_Session04/PTIT_CNTT4_IT201_Session04_Bai3.c
        PTIT_CNTT4_IT201_Session04/PTIT_CNTT4_IT201_Session04_Bai4.c
        PTIT_CNTT4_IT201_Session04/PTIT_CNTT4_IT201_Session04_Bai5.c
        PTIT_CNTT4_IT201_Session04/PTIT_CNTT4_IT201_Session04_Bai6.c
        PTIT_CNTT4_IT201_Session04/PTIT_CNTT4_IT201_Session04_Bai7.c
        PTIT_CNTT4_IT201_Session04/PTIT_CNTT4_IT201_Session04_Bai8.c
        PTIT_CNTT4_IT201_Session04/PTIT_CNTT4_IT201_Session04_Bai9.c
        PTIT_CNTT4_IT201_Session05/PTIT_CNTT4_IT201_Session05_Bai1.c
        PTIT_CNTT4_IT201_Session05/PTIT_CNTT4_IT201_Session05_Bai2.c
        PTIT_CNTT4_IT201_Session05/PTIT_CNTT4_IT201_Session05_Bai3.c
        PTIT_CNTT4_IT201_Session05/PTIT_CNTT4_IT201_Session05_Bai4.c
        PTIT_CNTT4_IT201_Session05/PTIT_CNTT4_IT201_Session05_Bai5.c
        PTIT_CNTT4_IT201_Session05/PTIT_CNTT4_IT201_Session05_Bai6.c
        PTIT_CNTT4_IT201_Session06/PTIT_CNTT4_IT201_Session06_Bai1.c
        PTIT_CNTT4_IT201_Session06/PTIT_CNTT4_IT201_Session06_Bai2.c
        PTIT_CNTT4_IT201_Session06/PTIT_CNTT4_IT201_Session06_Bai3.c
        PTIT_CNTT4_IT201_Session06/PTIT_CNTT4_IT201_Session06_Bai4.c
        PTIT_CNTT4_IT201_Session06/PTIT_CNTT4_IT201_Session06_Bai5.c
        PTIT_CNTT4_IT201_Session06/PTIT_CNTT4_IT201_Session06_Bai6.c
        PTIT_CNTT4_IT201_Session06/PTIT_CNTT4_IT201_Session06_Bai7.c
        PTIT_CNTT4_IT201_Session07/PTIT_CNTT4_IT201_Session07_Bai1.c
        PTIT_CNTT4_IT201_Session07/PTIT_CNTT4_IT201_Session07_Bai2.c
        PTIT_CNTT4_IT201_Session07/PTIT_CNTT4_IT201_Session07_Bai3.c
        PTIT_CNTT4_IT201_Session07/PTIT_CNTT4_IT201_Session07_Bai4.c
        PTIT_CNTT4_IT201_Session07/PTIT_CNTT4_IT201_Session07_Bai5.c
        PTIT_CNTT4_IT201_Session07/PTIT_CNTT4_IT201_Session07_Bai6.c
        PTIT_CNTT4_IT201_Session07/PTIT_CNTT4_IT201_Session07_Bai7.c
        PTIT_CNTT4_IT201_Session07/clone.c
        PTIT_CNTT4_IT201_Session08/PTIT_CNTT4_IT201_Session08_Bai1.c
        PTIT_CNTT4_IT201_Session08/PTIT_CNTT4_IT201_Session08_Bai2.c
        PTIT_CNTT4_IT201_Session08/PTIT_CNTT4_IT201_Session08_Bai3.c
        PTIT_CNTT4_IT201_Session08/PTIT_CNTT4_IT201_Session08_Bai4.c
        PTIT_CNTT4_IT201_Session08/PTIT_CNTT4_IT201_Session08_Bai5.c
        PTIT_CNTT4_IT201_Session08/PTIT_CNTT4_IT201_Session08_Bai6.c
        PTIT_CNTT4_IT201_Session08/PTIT_CNTT4_IT201_Session08_Bai7.c
        PTIT_CNTT4_IT201_Session08/PTIT_CNTT4_IT201_Session08_Bai8.c
        PTIT_CNTT4_IT201_Session08/dophuctap.c
        PTIT_CNTT4_IT201_Session09/demo/Singly_Linked_List.c
        PTIT_CNTT4_IT201_Session09/demo/add_Linked_List.c
        PTIT_CNTT4_IT201_Session09/PTIT_CNTT4_IT201_Session09_Bai8.c
        PTIT_CNTT4_IT201_Session09/PTIT_CNTT4_IT201_Session09_Bai1.c
        PTIT_CNTT4_IT201_Session09/PTIT_CNTT4_IT201_Session09_Bai2.c
        PTIT_CNTT4_IT201_Session09/PTIT_CNTT4_IT201_Session09_Bai3.c
        PTIT_CNTT4_IT201_Session09/PTIT_CNTT4_IT201_Session09_Bai4.c
        PTIT_CNTT4_IT201_Session09/PTIT_CNTT4_IT201_Session09_Bai5.c
        PTIT_CNTT4_IT201_Session09/PTIT_CNTT4_IT201_Session09_Bai6.c
        PTIT_CNTT4_IT201_Session09/PTIT_CNTT4_IT201_Session09_Bai7.c)
add_executable(Bai02 PTIT_CNTT4_IT201_Session01/PTIT_CNTT4_IT201_Session01_Bai02.c)

